--- a/設定集/聖典/《公正聖典》.md
+++ b/設定集/聖典/《公正聖典》.md
@@ -1,5 +1,3 @@
-
-
 # 《公正聖典》（正典｜只描述神話）
 
 ## 卷一《以身換宇宙》
@@ -11,41 +9,39 @@
 不可衡量者，不可得樂。
 故公平欲立一可衡之世，使差與平得以生。
 
-**第二章：第一次交換**
+**第二章：第一次交換** 
 公平乃發其至權，名之曰交換。
-以身為價，以宇宙為得；
-以形為逝，以識為存。
+以身為價，宇宙為得；
+形逝而志存焉。
 其身碎而成天穹、山海、金石、草木；
 其息散而成風雷、炎寒、潮汐；
 其骨為律，其血為勢，其髓為生。
-公平之識不滅，遍在萬物，如衡如秤，不語而必結。
+公平之識不滅，遍諸予萬物，如衡如秤，不語而必結。
 
-**第三章：衡之常道**
+**第三章：衡之常道** 
 公平既以身成世，則世中萬事皆有其路：
 種而後收，鍛而後成，學而後明，戰而後勝。
-是路者，衡之常道也。
+夫路者，衡之常道也。
 常道之中，價已隨事而付；
-故人耕不須召衡，人食不須呼秤。
+故人耕毋須召衡，人食毋須呼秤。
 凡順常道而行者，價不外加。
 
-**第四章：敲衡者與顯式交換**
+**第四章：敲衡者與顯式交換** 
 然人若欲越常道，以速求遲、以少求多、以必求偶然，
-則須敲衡而告其意。
+則須敲衡而告其意。 
 敲衡者或以意志，或以式法，或以誓詞，或以供物。
 衡既應，則立其得，亦立其價。
 若價明，則價從所明；
 若價不明，則衡自取其便取者。
 是故人當慎言其求，慎守其承。
 
-**第五章：識長存而不偏**
-公平之識長存，然不偏於王侯，亦不偏於貧者。
-不因祈而增，不因怨而減。
+**第五章：識長存而不偏** 
+公平之識長存，不偏於王侯，亦不偏於貧者。
+不因祈增，不因怨減。
 唯視其所求與其所付，如秤兩端，必求相當。
 此即公平之名，亦是公正之本。
 
-**卷末讚句（常用章節引言）**
+**卷末讚句（常用章節引言）** 
 衡不語而必結；
 人若敲衡，衡必應。
 得必有價，價必有歸。
-
----
