--- a/主線/第一卷/08_第八章.md
+++ b/主線/第一卷/08_第八章.md
@@ -1,225 +1,424 @@
-
 ## 第一卷《污痕之線》
 
-### 第八章：門口的燈
+### 第八章：門口的燈（續）
 
-燈光照在雪上，也照在他們的腳印上。
+「天快亮了。」門邊那人笑著說，「你以為你走得出侯爵府的大門嗎？」
 
-門邊那人把燈舉得更高，像怕看不清。斗篷的邊緣被風掀了一下，露出胸前那點銀光。
+燈光照在雪上，也照到他們的腳印。那人把燈舉得很高，像怕錯過什麼。
 
-徽章。
+雷昂沒回話。他先把盾往前移半步，把她整個人擋住。
 
-不是侯爵的紋章，是聖廷的。
+她按著耳後，秤鳴急得發疼。她盯著那人胸口的徽章看了兩息，然後視線往旁邊一偏，像在確認別的東西。
 
-「雷昂，天快亮了。」那人又說一次，語氣很平，像在提醒他一件大家都知道的事。「你以為你走得出侯爵府的大門嗎？」
-
-雷昂沒回答，先把盾往前移半步，擋住她。
-
-她站在他身後，按著耳後。秤鳴很急，像線被人拉著走。她盯著門邊那人胸口的徽章，眼神很冷，像在找那一絲灰。
+那徽章旁邊的布料，有一段不自然的灰。像有人剛洗過，又怕洗得太明顯。
 
 「塞維爾。」雷昂說。
 
-塞維爾笑了一下，燈火把他的半張臉照亮。那笑不帶溫度。
+塞維爾笑了一下，像被叫到名字很開心。
 
-「我說過，給你程序。」塞維爾抬了抬另一隻手，手裡有一張折好的紙。「拘令。封存令。你要的都有。」
+「我說過，我給你程序。」他把另一隻手抬起來，手裡是一張折好的紙，「拘補令，封存令。你要的都有。」
 
-他把紙展開一角，讓雷昂看見上面的章。
+他把紙展開一角，讓雷昂看見印。
 
-很清楚，聖廷的抄封印在最下面，教區印在中間，最上面還多了一個——侯爵府的公證印。
+三個印都在。聖廷抄封、教區印、侯爵府公證印。
 
-三印齊全。
+寫得漂亮，蓋得也漂亮。
 
-很漂亮。
+雷昂沒有靠近，只問：「見證人呢？」
 
-雷昂沒有靠近。他知道這種紙最常見的用途，可不是抓人。
+塞維爾的笑意不變：「天亮才到。現在先回去，別讓我難做。」
 
-「你現在要抓我？」雷昂問。
+他把燈往旁邊偏了偏，光剛好照到她的腳。
 
-「不是抓。」塞維爾說，「是請你回去。」他用燈指了指他們身後那條走廊，「回到房裡，等天亮，等你明日‘依程序提交’。」
+「你也把她藏得嚴了吧。」塞維爾說，「我不是沒看過偽印匠。你要押解上聖廷？可以。先把人交給我。」
 
-雷昂盯著那張紙：「拘留原因是什麼？」
+雷昂回得很平：「不可能。」
 
-塞維爾像早背好了：「戰時滋亂、阻責、擅押嫌疑人、意圖逃逸。」他說到最後四字時，故意停了一下，像讓雷昂自己聽清楚。
+塞維爾嘆了口氣，像在教一個不聽話的新人。
 
-「意圖逃逸」四個字落下，院門兩側的陰影裡就有人動了。
+「你不懂。」他說，「北境的路不是那麼好走。」
 
-一左一右，各出現兩名守衛，手裡提著短弓，沒有拉弦，但箭已搭上。
+他抬手。
 
-再往內一點，有人慢慢關上了外門的副閂。不是大門，是門內那道小閂。聲音很輕，卻很實。
+院牆上有弓弦拉緊的聲音。不是一把，是好幾把。燈光照不到的地方，已經有人把他們套在一個圈裡。
 
-塞維爾看著雷昂：「你知道我為什麼挑這裡談嗎？這裡最好寫。你動手，就是抗令。你不動手，就得回去。」
+她按著耳後，肩膀一縮。她用指尖在雷昂盾背後快速寫：
 
-雷昂沒有說話。他的右手握著鎚柄，左手穩著盾。姿勢沒有變，但他整個人更沉。
+**「後。」**
 
-她在他身後動了動指尖，在掌心寫了兩個字，貼著他的盾緣讓他看見：
+雷昂眼角一掃，看見巷子的另一端也亮起一點光。不是燈，是火盆被人端近。那邊有人靠過來，腳步更急。
 
-**「很多。」**
+前後都有人。
 
-不只門口。院牆上也有人。她聽得出來。
+塞維爾的聲音更低了些，像怕吵到誰：「現在回去，今晚就只是一場誤會。」
 
-塞維爾又說：「把信交出來，把她交出來。你就可以走。你可以繼續查案，只是換個方式查。」
-
-雷昂回得很平：「換個你能控制的方式。」
-
-塞維爾不否認，反而笑了：「你終於學會聽話了。」
-
-他把燈往旁邊偏了一點，讓光照到她的腳。雪黏在她腳背上，紅得很明顯。
-
-「她呢？」塞維爾說，「你要為一個偽印匠，把自己寫進拘令？」
-
-雷昂沒有退。
-
-「她是嫌疑人。」雷昂說，「也是證人。我要押上聖廷。」
-
-塞維爾的笑收了一點：「呵？你拿什麼押？你現在連這道門都過不去。」
-
-他抬了抬手裡那張紙：「而且你要記清楚——這是程序。你最愛的程序。」
-
-雷昂盯著那張紙看了兩息，忽然說：「把拘令念一遍。」
-
-塞維爾挑眉：「你要我當場念給你聽？」
-
-「對。」雷昂說，「按規定。拘令需宣讀拘因與執行人。你要抓我，就念。」
-
-塞維爾看著他，像在衡量要不要配合這個“麻煩”。最後他笑了笑，真的把紙攤開，念了兩行。
-
-念到「執行人」那一欄時，他停了一下。
-
-雷昂抓住那一下停頓：「執行人是誰？」
-
-塞維爾抬眼：「我。」
-
-雷昂點頭：「見證人？」
-
-塞維爾的指尖在紙上點了一下：「侯爵府公證官。教區誓印官。」
-
-雷昂再問：「他們人在哪？」
-
-塞維爾笑意不變：「睡了。天亮才會來。」
-
-雷昂也笑了一下，很短，很冷。
-
-「那你現在抓不了我。」他說。
-
-塞維爾的眼神終於冷了一瞬：「鑽字眼？」
-
-「我在照你說的程序走。」雷昂說。
-
-院牆上的弓手動了一下，有人差點就要拉弦。塞維爾抬手壓住，示意別急。
-
-「好。」塞維爾說，「你要見證人，我給你。但在他們來之前——」他抬燈指向他們的腳印，「你們得留在這裡。」
-
-留在燈下。留在弓下。留在門前。
-
-她在雷昂身後按著耳後，秤鳴忽然跳了一下，變得很尖。她抬頭，看向院門旁那盞燈。
-
-不是燈火刺耳，是燈座底下有東西。
-
-一圈很淡的痕，像有人抹過銀墨。
-
-錨點。
-
-她的指尖立刻在掌心寫：
-
-**「燈。」**
-**「錨。」**
-
-雷昂看見了，沒有回頭。他只往旁邊挪了半步，把盾角微微偏出去，像是不經意地替她擋了視線。
-
-塞維爾看著他們的小動作，笑了一下：「怎麼？你們還想跑？」
-
-雷昂答：「你不是說讓我們等嗎？」
-
-塞維爾也答：「也可以。別亂動。」
-
-她沒有再寫字。她只是慢慢蹲下去，像要整理腳邊的雪，手指卻在雪裡摸到一塊小石子。
-
-下一秒，她把石子彈了出去。
-
-石子很小，打在燈柱上卻剛好。燈火晃了一下。不是熄，是晃。
-
-而她趁燈火晃動的那半息，把刮刀在雪裡一划，劃到燈座底下那圈痕的邊緣。
-
-刮下來的不是雪，是一點細細的灰黑。
-
-秤鳴尖得像針，她的肩抖了一下，但手沒停。
-
-塞維爾的眼神一變，立刻抬手：「射——」
-
-話還沒出口，雷昂已經往前踏了一步。
+雷昂沒有退。他把盾再往前推半寸。
 
 不退。
 
-他用身軀整個把她罩住，硬吃第一支箭。箭頭扎進盾皮，聲音很悶。第二支箭緊跟著來，雷昂把盾一旋，箭擦著盾緣飛過，釘在雪裡。
+「我回去。」雷昂說，「你就會說我意圖逃逸未遂。你不缺理由。」
 
-她在影下再刮一下。
+塞維爾笑了。
 
-那圈痕斷了一小截。
+他往旁邊讓了一步，像把路讓出來，但那步其實是在把他們更明確地逼在燈下。
 
-燈火猛地暗了一下，像被人掐住了。
+她忽然拉了雷昂的斗篷一下。
 
-院子一下子黑了半步。
+雷昂沒回頭，只用餘光看見她往馬廄方向指了一下，又指了指那扇小門——他們剛才開到一條縫的外側門。
 
-黑到足夠讓人看錯一步。
+然後她在掌心寫了兩個字：
 
-雷昂抓住那一步的空檔，低聲說：「走！」
+**「馬。」**
+**「假。」**
 
-他不往大門衝。大門外一定有人。他往右，往院牆最暗的那段貼過去，用盾把她推在自己身後，兩人沿牆快走。
+雷昂懂了。
 
-弓手反應過來，拉弦。
+他們要讓所有人以為他們往外門走、甚至騎馬走。來一個聲東擊西。
 
-第三支箭飛出時，她已經貼牆蹲下，箭從他們頭上掠過，打在牆上碎開。
+雷昂把盾往前一抬，故意跨出半步，讓自己完全暴露在燈下。
 
-塞維爾在黑裡喊：「封門！別讓他們進回廊！」
+「你要逮捕我。」雷昂看著塞維爾，「就現在。不用等到天亮。」
 
-有人衝去堵回廊口。也有人朝內院追來，腳步很亂。
+塞維爾像被他這句話逗笑：「你這是在逼我？」
 
-雷昂知道：他們不是真的要殺自己，他們要的是那封信，還有她。
+雷昂回：「對。」
 
-他把盾往前一頂，撞開一個衝來的守衛。戰鎚抬起，敲在對方膝側，那人立刻跪下。雷昂沒補第二下，他只要路。
+塞維爾眼神冷了一瞬，但很快又恢復那種輕鬆：「好。那——」
 
-她跟在他身後，赤足踩雪仍無聲。她手指按著耳後，像快要撐不住，但眼神一直清醒。
+他話沒說完，雷昂已經動了。
 
-他們繞到馬廄旁的陰影，馬在裡頭不安地噴氣。雷昂抓住一扇側門的門環，用力一扯——門是鎖著的。
+雷昂不是衝向塞維爾，他是衝向燈。
 
-後方的腳步聲越來越近。
+盾面一撞，直接把燈撞歪。燈油晃出來，火焰撲了一下，光瞬間亂了。
 
-她伸手按住門鎖旁的鐵片，指尖在雪裡摸了一下，摸出一根很細的針。她沒有抬頭，只低低呼一口氣，手就伸進鎖孔。
+同一秒，戰鎚敲在燈柱底座上。
 
-兩下。
+燈座猛地一晃，火光熄滅，創造出一瞬間的空檔。
 
-咔。
+弓手本來要放箭，第一箭卻晚了半拍，只能射在盾上。箭頭扎進皮面，雷昂肩一沉，穩住。
 
-鎖開了。
+他不退。
 
-雷昂推門進去，反手把她拉進來。門關上，他沒上閂，只把盾頂在門內側。
+「放！」有人喊。
 
-外頭有人撞門。
+第二箭跟著來。
+
+雷昂盾面一旋，把箭帶偏，箭擦著盾緣飛過，釘進雪裡。
+
+就在這兩箭之間，她動了。
+
+她沒有往外門跑，反而往馬廄那道小門一退，手上匕首一閃，割斷了兩匹馬的繫繩。
+
+兩匹馬受驚。一前一後往外門那條縫衝。她把門一推，門開得更大，馬直接撞出去，蹄子踏在雪上，聲音一下子蓋過了所有人的喊。
+
+外門外那條勤務道原本很靜，現在被馬蹄聲撕開。
+
+「馬！」有人大叫，「他們騎馬跑了！」
+
+幾個守衛下意識就往外門追。弓手也轉了方向，怕射到自己人，箭與停了一瞬。
+
+塞維爾的臉色一變。馬跑了，他無所謂。但包圍圈散了，人就抓不住了。
+
+他立刻抬手：「別追！回來——」
+
+但命令慢了半拍。包圍圈就有了破口。
+
+雷昂抓住這半拍，盾面往前一頂，把塞維爾和自己隔開一個距離。他沒有要殺，也沒有要抓。他只要時間。
+
+她已經回到雷昂身側，按著耳後喘了一口氣。秤鳴還在刺，但她撐住了。她指向馬廄牆根那道低矮小門旁邊的另一塊木板。
+
+那塊板很低，很髒，平常根本不會有人注意。
+
+她在掌心寫：
+
+**「下。」**
+
+雷昂愣了半息，隨即明白：不是門，是下面。
+
+這是馬廄旁的排水道。
+
+侯爵說「下水道的肉」，行會說「老鼠」。那現在他們就用老鼠的路離開。
+
+雷昂沒有猶豫。他把盾往外一撐，硬擋住再補上的一箭。箭扎在盾上，震得手臂發麻，但他腳沒退。
+
+她趁這一下，蹲下去把那塊低板的卡榫扳開。卡榫很緊，結著冰，她用匕首背敲兩下才鬆。
+
+木板掀開，一股臭氣立刻上來，混著冰冷的濕氣。
+
+下面是一條窄渠，黑水慢慢流，水面有薄冰。高度只夠人彎腰鑽。
+
+外頭有人終於反應過來：「他們在那！」
+
+塞維爾也看見了。他的聲音第一次不再輕鬆：
+
+「雷昂！」
+
+雷昂把盾整個蓋過去，像把門蓋住洞口。他回頭對她只說一句：
+
+「先下。」
+
+她點頭，沒有猶豫，直接滑進去，落地時沒有聲音，只在水裡濺出很小的響。她一手扶著渠壁，一手按著耳後，忍著那股刺痛往前。
+
+雷昂後下。
+
+他半個身子剛鑽進去，外面就有人撲到洞口，手伸進來抓。他盾緣一卡，把那隻手卡在木板邊緣。
+
+「啊——！」
+
+對方抽回手時已經見血。
+
+雷昂把木板往回一扣，沒有鎖死，只是讓它看起來像被匆忙蓋上。然後他在黑水裡轉身，往前追她。
+
+下水道裡很窄，他們只能一前一後。水冷得像刀，靴子一踩就灌進來。雷昂沒有出聲，只把呼吸壓到最低。
+
+前方的她忽然停了一下，按住耳後。
+
+秤鳴變得很亂。
+
+她回頭，比了一個手勢：外面有人在上頭跑，還有人在外門追馬。兩條追的路，一條是真的，一條是假的。
+
+他們在最髒的路上，反而暫時沒被盯死。
+
+渠道往前延伸，越走越低。雷昂的肩甲幾次刮到石壁，聲音很小，但他每次都停一下，等上頭的腳步聲過去再動。
+
+走了不知多久，前方忽然出現一點更冷的風。
+
+不是室內的冷，是外頭的冷。
+
+她加快兩步，停在一面鐵柵前。鐵柵堵著出口，外面是一片更白的雪光。柵條上結著厚冰，顯然很久沒被推開。
+
+她抬手摸了一下冰，指尖立刻紅了。她回頭看雷昂，眼神很清楚：要出去了，但差一步。
+
+雷昂把盾靠到一旁，雙手握住鐵柵的橫條。他深吸一口氣，肩背沉下去。
+
+不退。
+
+鐵柵發出一聲細響，冰開始裂。
+
+外頭遠處傳來混亂的喊聲，有人在叫馬，有人在罵追錯路。也有人在查下水道，腳步聲正朝這邊靠近，隔著石壁仍聽得見。
+
+雷昂握緊鐵柵，再用力一次。
+
+冰裂得更大，鐵柵鬆了一點點，冷風灌進來，雪味很清楚。
+
+他們已經看得到外面的天色——黎明前最灰的那種亮。
+
+還差最後一下。
+
+雷昂把手指重新扣上鐵柵的橫條，指節被冰磨得發麻。他沒有停，肩背沉下去，整個人往前壓。
+
+不退。
+
+鐵柵發出一聲細響，冰開始碎。碎冰落進黑水裡，啪、啪兩下，很輕。
+
+身後的火光更近了。水花聲、喘息聲、短促的命令聲全混在一起。
+
+「在前面！」
+「別讓他們出去！」
+
+她按著耳後，臉色白了一分。秤鳴在這裡很亂，像被什麼東西拖著走。她把手伸到柵條邊緣摸了一下，立刻縮回來，在掌心寫：
+
+**「墨。」**
+**「痕。」**
+
+雷昂看見了。柵條內側有一圈很淡的墨痕，像有人刻意留過。
+
+他沒有時間再選路。
+
+「壓住它。」雷昂低聲說。
+
+她懂了。她用指尖沾了渠水裡的泥，薄薄抹在銀痕上。那動作很快，像在把尖銳的東西蒙住。秤鳴仍刺，但稍微鈍了一點。她咬住牙，沒出聲。
+
+雷昂趁那一瞬，再用力。
+
+鐵柵終於鬆開到能過人的程度。冷風灌進來，雪味很清楚。
+
+他們還沒來得及鑽出去，身後已有人衝到近處，火把光晃到渠壁上，照出兩人的濕影。
+
+雷昂把盾推到柵旁，先讓她走。
+
+她沒有猶豫，縮身鑽出去，落到外頭的雪溝裡，膝蓋一沉。她立刻按住耳後，喘了一口，把秤鳴壓回去。
+
+雷昂跟著鑽。
+
+就在他半個身子出去時，身後有人撲上來，手要抓他。雷昂盾緣一頂，把那隻手頂回水裡。下一秒他整個人翻出來，雙腳踩進雪溝。
+
+外頭不是庭院，也不是路。是侯爵府外牆根下的一段排水溝，積雪半尺深，牆上結霜，腳印很容易留下。
+
+他剛站穩，就看見前方有一盞燈。
+
+燈在雪裡很低，光不大，卻剛好照到他們出口的位置，像早就算過。
+
+燈旁站著一個人。
+
+塞維爾。
+
+他沒帶人。沒有弓手，沒有守衛。只有那張乾淨的臉，那枚銀徽章，還有一份折好的紙，像隨時能拿來把人寫進簿裡。
+
+塞維爾，語氣很輕鬆說「你果然走的這裡。」
+
+雷昂沒有回話，只把盾抬起半寸，擋住她。
+
+她在他右後半步，赤足踩在雪裡，腳背紅得發亮。她按著耳後，秤鳴在這個人身上不尖，卻很黏，像線繞住了就不放。
+
+塞維爾把那份紙展開一角，讓他看見印。
+
+三印齊全。
+
+他抬眼：「交出信。交出她。你可以走。」
+
+「不可能。」雷昂回得很平。
+
+塞維爾笑了一下：「你每次都把話說得很死。但你覺的這樣有用嗎？」
+
+他往前一步，靴底踩在雪上，很穩。
+
+雷昂盯著他：「你一個人？」
+
+塞維爾把燈往旁邊放低，像把手空出來。然後他從斗篷內側抽出一條很窄的布帶，布帶上釘著一枚小小的封蠟牌，牌面是教區簡印。
+
+「不用別人。」他說。
+
+雷昂的眼神沉了下去。
+
+塞維爾把布帶一甩，像拋繩一樣拋出來，直取雷昂盾背的皮帶。
+
+啪。
+
+布帶扣住的一瞬間，那枚封蠟牌貼上盾背，像黏住了。雷昂手臂一沉，盾像忽然重了一截。
+
+不是物理的重，是動作被拖慢了半拍。
+
+她的秤鳴立刻尖了一下。
+
+**顯式交換。**很小，很快的“敲衡”。
+
+塞維爾盯著雷昂，語氣輕笑：「不退，盾不離手。很好利用的破綻。」
+
+雷昂沒有去扯布帶。他直接抬鎚，敲在封蠟牌邊緣。
 
 砰。
 
-雷昂肩膀一沉，穩住。第二下撞門更重，他仍不退。
+封蠟牌裂了一道。
 
-她靠著馬廄木欄喘了一口氣，按著耳後。秤鳴還在，但總算沒那麼尖。
+雷昂手臂一輕，盾的拖滯感鬆了一點，但沒有完全消失——交換已經成立，裂掉只是破壞“錨”。
 
-雷昂看著她，低聲說：「你剛才刮的是錨點？」
+塞維爾在那瞬間也微微皺了下眉，他付出了一點代價：指尖在滲血，滴在雪上。
 
-她點頭，然後在掌心寫：
+「你知道你在做什麼嗎？」塞維爾輕聲說，「你毀了一個合法誓印。」
 
-**「只能一下。」**
+雷昂沒有被激怒。他只往前一步，盾面推進，逼塞維爾後退半步。
 
-只能破一點，只能換一個瞬間。
+不退。
 
-雷昂懂了。他把手伸進衣內暗袋，摸到那封信。封蠟仍在，邊緣微熱。
+塞維爾終於拔刀。刀很窄，很直，出鞘聲很輕，像他這個人：乾淨、快、只做必要的事。
 
-門外塞維爾的聲音又傳來，近了，且不急。
+刀尖刺向膝蓋。
 
-「雷昂。」他說，「你躲得了一次。你躲不到天亮。」
+雷昂盾緣一壓，擋住第一刺。第二刺擦過盾邊，直取雷昂左腕。雷昂鎚柄一架，把刀路撥開，鎚頭順勢敲向塞維爾前臂。
 
-雷昂沒有回話，只把盾帶拉緊。
+塞維爾不硬吃，他撤得很快，刀尖一轉，反而在雷昂盾下緣劃了一道，想把雷昂的步子切開。
 
-他知道塞維爾說得對。天亮之後，就離不開了。
+雷昂沒有退。他直接往前踏，踏進塞維爾最不想要的距離。
 
-而他們現在要做的，是在天亮前離開侯爵府——帶著信，帶著人，帶著還沒被覆寫的那一點證據。
+盾面頂上去，鎚頭貼著盾緣，把對方逼到牆上。
+
+塞維爾被逼到外牆面前，腳跟碰到牆根的冰，終於皺眉。那種皺眉不是怕，是覺得麻煩。
+
+他抬手，指尖在空中比了一個很短的手勢，像打個結。
+
+雷昂手臂又是一沉——不是盾，是鎚。鎚柄像被無形的東西扯了一下。
+
+她的秤鳴在這一下尖到發疼。
+
+她立刻明白：塞維爾不是只在盾上做手腳。他身上一定還有第二個“錨”。
+
+她沒有出聲，整個人往側面滑出去，貼著牆陰影走。赤足踩雪不快，但很安靜。她繞到塞維爾後方半步，眼睛只盯著他腰側——那裡有一條細繩，繩上掛著一枚小小的蠟封牌，和剛才那枚同樣。
+
+錨在那裡。
+
+她伸手要割。
+
+塞維爾像背後長眼，刀尖忽然反掃，逼她退開。她退得很快，但刀尖還是在她小臂上劃出一道淺口。
+
+血冒出來的瞬間，秤鳴更尖。
+
+她咬住牙，沒叫。她只把指尖按住傷口，像把血先壓回去。然後她抬眼看雷昂：**他在拖。拖到追兵從下水道出來。**
+
+雷昂也知道。
+
+下水道口就在他們身後不遠。只要一個人鑽出來，塞維爾就不再是“一個人”。
+
+雷昂忽然停了一瞬，像把力收回來。塞維爾以為他要後退，刀尖立刻追上。
+
+就在刀尖追上的那一下，雷昂左腳不退反進，整個人往前壓，盾面直接撞上塞維爾胸口。
+
+塞維爾被撞得背貼牆，呼吸斷了一拍。
+
+雷昂的鎚頭在同一瞬間砸下去——砸向塞維爾腰側那枚蠟封牌。
+
+砰。
+
+蠟封牌碎裂，碎片飛進雪裡。
+
+那股“拖住”的感覺立刻鬆掉一截。塞維爾臉色終於變了一點。
+
+雷昂趁這一下，把鎚柄往上一頂，頂住塞維爾持刀的手腕。
+
+塞維爾的刀尖偏開。
+
+雷昂沒有補殺。他只是要開路。
+
+「走！」雷昂低聲說。
+
+她立刻動。
+
+她不是往大道跑，而是往外牆與雪坡交界那條盲區鑽。那裡灌木低，影子深，最不容易被燈照到。
+
+塞維爾想追，卻慢了半息。
+
+不是因為傷，而是因為他又想做一次交換——他抬手要去摸另一枚是印，卻摸了個空。
+
+錨被砸碎了。
+
+這半息，就是雷昂要的。
+
+雷昂盾面一橫，硬把塞維爾再逼回牆根，然後轉身跟上她。他們一前一後翻上雪坡，雪鬆，腳會滑。她赤足反而抓得住，雷昂靴底濕了，滑了一下，但他沒停。
+
+身後傳來一聲水花。
+
+下水道口有人要鑽出來了。
+
+塞維爾也聽見了，他的聲音第一次帶了怒意：「雷昂！」
+
+雷昂沒有回頭。
+
+他只把盾往後一抬，擋住背後可能飛來的第一刀，然後抓住她手腕，把她整個人拉進灌木影裡。
+
+灌木枝刮過臉，刺痛，但能遮住身形。
+
+他們沿著外牆盲區往前衝了十幾步，跳進一段更深的壕溝陰影裡。雪落在頭盔邊緣，立刻融成水。
+
+他們終於離開燈光。
+
+離開侯爵府外牆。
+
+雷昂停了一息，確認身後沒有立刻追上的腳步，才把呼吸放開一點。
+
+她按著耳後，秤鳴還在，但像遠了。她抬手在掌心寫了一個字：
+
+**「出。」**
+
+雷昂點頭。
+
+「走。」他說。
+
+兩人沿著壕溝的陰影往北去，朝更冷、更暗的地帶跑。天色開始發白，但白得還不足以照清他們的臉。
+
+背後的侯爵府仍安靜，像什麼都沒發生過。只有遠處偶爾傳來喊聲，像有人終於發現追錯了路。
+
+雷昂握緊盾帶，沒有回頭。
+
+他們成功突圍了。
 
 （第八章完）
