--- a/設定集/故事大綱/第一卷故事.md
+++ b/設定集/故事大綱/第一卷故事.md
@@ -122,10 +122,10 @@
 
 ## 第9章：無聲之名
 
-* **事件**：兩人策馬衝出侯爵府，甩開追兵後躲入城區邊緣的廢棄鐘樓喘息。
+* **事件**：兩人衝出侯爵府，甩開追兵後躲入城區邊緣的廢棄鐘樓喘息。
 * **動作場景**：無戰鬥，重點在「治療與對話」。雷昂為她處理赤足的凍傷與割傷。
 * **線索（世界觀）**：揭露「秤鳴」的本質——那是**「過載承擔者」**靈魂裂痕的回音。她曾是被迫簽下無數承擔的「容器」，因此對不公的震動極度敏感。
-* **誓條考驗**：雷昂詢問她的名字。她打破黑市「無名」的規矩，在佈滿灰塵的鐘下寫出真名：**瑪蕾亞（Marea）**。
+* **誓條考驗**：雷昂詢問她的名字。她打破黑市「無名」的規矩，在佈滿灰塵的鐘下寫出真名：**瑪蕾（Mare）**。
 * **關係推進**：雷昂看見她腳踝上密密麻麻的舊誓印疤痕（被當作消耗品使用的證明），也明白她為何「禁語」—首先是為了獲得力量—再來也是因為她的聲音早就被無數他人的誓言淹沒了。
 
 ## 第10章：銀墨街（逃亡篇）
